--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravelcollective/html": "^5.4.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "phpseclib/phpseclib": "^2.0",
+        "pusher/pusher-php-server": "^3.0",
         "stripe/stripe-php": "^5.7"
     },
     "require-dev": {
