added messenger functionality, changed packages, changed datetimepicker, added firstdate and seconddate field

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "lexxyungcarter/chatmessenger": "^1.0",
         "phpseclib/phpseclib": "^2.0",
-        "pusher/pusher-php-server": "^3.0",
+        "predis/predis": "^1.1",
+        "pusher/pusher-http-laravel": "^4.0",
+        "pusher/pusher-php-server": "~3.0",
         "stripe/stripe-php": "^5.7"
     },
     "require-dev": {
