--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "google/cloud-storage": "^1.2",
         "guzzlehttp/guzzle": "^6.3",
+        "jrean/laravel-user-verification": "dev-master",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.5.*",
         "laravel/scout": "^3.0",
