--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "gulp": "^3.9.1",
         "laravel-echo": "^1.3.3",
         "pusher-js": "^4.2.2"
     }
