--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=44596a72af4d0cc581ce",
     "/css/app.css": "/css/app.css?id=c17f9b5d945a4f1f3e6e",
-    "/js/googlemap.js": "/js/googlemap.js?id=0693f04c7ce43dee4eb7"
+    "/js/main.js": "/js/main.js?id=d00fdc41db656848d593",
+    "/js/googlemap.js": "/js/googlemap.js?id=67ebedc4b76261eb92e2"
 }
