--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">=7.0.0",
         "aws/aws-sdk-php-resources": "^0.3.0",
+        "blockchain/blockchain": "^1.4",
+        "coinbase/coinbase": "^2.7",
         "fideloper/proxy": "~3.3",
         "google/cloud-storage": "^1.2",
         "guzzlehttp/guzzle": "^6.3",
